--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.4.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -61,6 +63,7 @@ flutter:
   assets:
     - lib/assets/questions/
     - lib/assets/words/
+    - lib/assets/images/logo.png
 
 
 
@@ -89,4 +92,15 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "lib/assets/images/logo.png"
+
+flutter_native_splash:
+  color: "#ffffff" # Hintergrundfarbe
+  image: lib/assets/images/logo.png
+  android: true
+  ios: true
 
