--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,7 +64,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/assets/questions/
-    - lib/assets/words/
+    - lib/assets/words/classic/
+    - lib/assets/words/similar/
     - lib/assets/images/logo.png
 
 
